--- a/doc/常用命令.adoc
+++ b/doc/常用命令.adoc
@@ -1,7 +1,17 @@
 = 常用命令
 
+== 生成模型
+
+进入xxx-svr的项目目录，执行下面的命令
+
+[source,bash]
+----
+sea-orm-cli generate entity --model-extra-derives Default --with-serde both --ignore-tables _sqlx_migrations --database-url postgres://ossrs:ossrs@127.0.0.1/ossrs -o src/model
+----
+
 == 新增数据库版本
 
+. 进入xxx-svr的项目目录，执行下面的命令
 . 配置连接数据库的环境变量，示例如下:
 +
 ..env
@@ -24,11 +34,4 @@ sqlx migrate add <版本名称>
 . 上面的命令会在`migrations`目录下生成一个文件，文件名格式为 `V<版本号>_<版本名称>.sql`，例如 `V20220101000000_create-table.sql`
 . 在生成的文件中编写SQL语句，并保存
 . 每次运行程序都会自动判断是否需要执行数据库迁移，如果需要则执行迁移
-
-== 生成模型
-
-[source,bash]
-----
-sea-orm-cli generate entity --model-extra-derives Default --with-serde both --ignore-tables _sqlx_migrations --database-url postgres://ossrs:ossrs@127.0.0.1/ossrs -o src/model
-----
 
